@@ -3,6 +3,9 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.13...]
+### 2019-05-07
+	Changed: Loading is slightly altered to accommodate following changes.
+	Changed: Main window display is changed. It no longer should be topmost at launch. Only when user manually has requested the window.
 ### 2019-05-06
 	Fix: Audio hooking could sometimes silently fail for a time.
 	Fix: Exiting too quickly causes an exception as tasks are cancelled.
